--- a/index.html
+++ b/index.html
@@ -17,23 +17,19 @@
 
 <div class="p-5 bg-primary text-white text-center">
   <h1>Welcome to the CLLC Board of Educational Programming</h1>
-  <p>Resize this responsive page to see the effect!</p> 
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="#">Active</a>
+        <a class="nav-link active" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">News & Events</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link" href="#">About</a>
       </li>
     </ul>
   </div>
@@ -41,30 +37,7 @@
 
 <div class="container mt-5">
   <div class="row">
-    <div class="col-sm-4">
-      <h2>About Me</h2>
-      <h5>Photo of me:</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <h3 class="mt-4">Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <hr class="d-sm-none">
-    </div>
-    <div class="col-sm-8">
+     <div class="col-sm-8">
       <h2>TITLE HEADING</h2>
       <h5>Title description, Dec 7, 2020</h5>
       <div class="fakeimg">Fake Image</div>
@@ -73,13 +46,6 @@
       <br>
       <p>
         Additionally, BOEP is in charge of selecting the Collins courses. Each semester, BOEP receives many proposals for courses to evaluate and ultimately choose from. Since taking a Collins course is a residency requirement, BOEP takes great care in assessing each course that comes through us in a series of interviews and meetings. The process is entirely student-run, providing a great space to make your voice heard and to help assure that our courses will meet the needs and interests of Collinsites and provide a quality educational experience.We're looking forward to selecting a whole new set of courses this semester and are always eager to have new members!</p>
-
-      <h2 class="mt-5">TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2020</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    </div>
   </div>
 </div>
 
