--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <div class="p-5 bg-primary text-white text-center">
-  <h1>Welcome to the CLLC Board of Educational Programming</h1>
+  <h1>CLLC Board of Educational Programming</h1>
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -38,20 +38,13 @@
 <div class="container mt-5">
   <div class="row">
      <div class="col-sm-8">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2020</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
+      <h2>Welcome to BOEP!</h2>
       <p>BOEP is a student group that all Collinsites are welcome to join throughout the semester. We meet bi-weekly and fund and put on educational programs for the community, including informal conversations with faculty members around campus (like fireside chats and professor dinners), trivia nights, book discussions, short courses taught by other Collinsites, and more. We also publish The Pipe and the Barrow each year, Collins’ academic publication.</p>
       <br>
       <p>
         Additionally, BOEP is in charge of selecting the Collins courses. Each semester, BOEP receives many proposals for courses to evaluate and ultimately choose from. Since taking a Collins course is a residency requirement, BOEP takes great care in assessing each course that comes through us in a series of interviews and meetings. The process is entirely student-run, providing a great space to make your voice heard and to help assure that our courses will meet the needs and interests of Collinsites and provide a quality educational experience.We're looking forward to selecting a whole new set of courses this semester and are always eager to have new members!</p>
+    </div>
   </div>
 </div>
-
-<div class="mt-5 p-4 bg-dark text-white text-center">
-  <p>Footer</p>
-</div>
-
 </body>
 </html>
