--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       <li class="nav-item">
         <a class="nav-link" href="#">About</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Prospective Instructors</a>
+      </li>
     </ul>
   </div>
 </nav>
