--- a/prospective_instructors.html
+++ b/prospective_instructors.html
@@ -23,7 +23,7 @@
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="#">Home</a>
+        <a class="nav-link active" href="https://dvesper729.github.io/boep/">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">News & Events</a>
