--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a class="nav-link" href="#">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Prospective Instructors</a>
+        <a class="nav-link" href="https://dvesper729.github.io/boep/prospective_instructors">Prospective Instructors</a>
       </li>
     </ul>
   </div>
