--- a/proposal_guidelines.html
+++ b/proposal_guidelines.html
@@ -32,7 +32,7 @@
         <a class="nav-link" href="#">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://dvesper729.github.io/boep/prospective_instructors">Prospective Instructors</a>
+        <a class="nav-link" href="#">Prospective Instructors</a>
       </li>
     </ul>
   </div>
@@ -57,12 +57,12 @@
       <p>
         <strong>Proposal guidelines</strong><br>
         <strong>Overview</strong><br>
-        FFor the most part, we seek 3-credit hour course proposals, particularly but not exclusively at the 100 and 200 level. The majority of our courses are eligible for Gen Ed credit. You may indicate the level of course you prefer to teach but the final decision rests with the Collins Faculty Curriculum Committee. With the exception of creative writing classes, all courses meet College distributional requirements. Taking an in-house course is required of freshman and sophomore Collins residents. <br>
+        For the most part, we seek 3-credit hour course proposals, particularly but not exclusively at the 100 and 200 level. The majority of our courses are eligible for Gen Ed credit. You may indicate the level of course you prefer to teach but the final decision rests with the Collins Faculty Curriculum Committee. With the exception of creative writing classes, all courses meet College distributional requirements. Taking an in-house course is required of freshman and sophomore Collins residents. <br>
         Class size is usually limited to 20 to allow students to participate in a small community of learners. All classes meet in a Collins classroom, where media equipment is available.<br><br>
 
         <strong>Course topics</strong><br>
-        Courses may address particular topics within a discipline or be interdisciplinary. Courses will not be considered if they are already available or overlap considerably with existing courses. We look for courses that are innovative and not taught elsewhere. <br>
-        Course content must be within your area of expertise. For instance, films may be shown for their relevant subject matter, but not for technical and artistic purposes if you are not a film studies scholar. <br>
+        Courses may address particular topics within a discipline or be interdisciplinary. Courses will not be considered if they are already available or overlap considerably with existing courses. We look for courses that are innovative and not taught elsewhere. <br><br>
+        Course content must be within your area of expertise. For instance, films may be shown for their relevant subject matter, but not for technical and artistic purposes if you are not a film studies scholar. <br><br>
         Proposed courses should not have any prerequisites since many students will be incoming freshmen.<br><br>
 
         <strong>General Education Breadth of Inquiry Credit</strong><br>
@@ -72,31 +72,31 @@
         <a href="https://gened.indiana.edu/requirements/index.html" target="_blank">Learn more about General Education requirements</a><br><br>
 
         <strong>Teaching qualifications</strong><br>
-        Most Collins seminars are taught by advanced graduate students in the College of Arts and Sciences. Faculty also teach at Collins from time to time and should contact the Collins director about this possibility. Potential adjunct instructors should also contact the director about eligibility. Instructors pursuing degrees in units outside of the College of Arts and Sciences are not eligible to teach at Collins LLC.<br>
-        Note, for those who have taught at Collins before and would like to teach again: there is a limit of 2 courses total that an individual AI may be hired to teach by a College-affiliated LLC.<br>
+        Most Collins seminars are taught by advanced graduate students in the College of Arts and Sciences. Faculty also teach at Collins from time to time and should contact the Collins director about this possibility. Potential adjunct instructors should also contact the director about eligibility. Instructors pursuing degrees in units outside of the College of Arts and Sciences are not eligible to teach at Collins LLC.<br><br>
+        Note, for those who have taught at Collins before and would like to teach again: there is a limit of 2 courses total that an individual AI may be hired to teach by a College-affiliated LLC.<br><br>
         Additionally, if you are currently teaching at Collins or are scheduled to teach in a future semester, you may not be approved to teach another course until after your course evaluations have been reviewed.<br><br>
 
         <strong>Classwork + assignments</strong><br>
-        Try alternative approaches. We encourage creative assignments involving visual and auditory presentations that complement or supplement written responses, the use of media to extend learning opportunities, field trips, and a variety of “hands-on” experiences. Keep in mind that seminars should be largely discussion-based and less dependent on class lectures. <br>
-        The objective: To make Collins courses among the most memorable and stimulating of a student’s academic life, inviting the best of effort and commitment while maintaining academic rigor and quality. <br> For most courses, reading assignments should not exceed about 50 pages per week with less assigned for weeks that include more difficult texts.<br><br>
+        Try alternative approaches. We encourage creative assignments involving visual and auditory presentations that complement or supplement written responses, the use of media to extend learning opportunities, field trips, and a variety of “hands-on” experiences. Keep in mind that seminars should be largely discussion-based and less dependent on class lectures. <br><br>
+        The objective: To make Collins courses among the most memorable and stimulating of a student’s academic life, inviting the best of effort and commitment while maintaining academic rigor and quality. <br><br> For most courses, reading assignments should not exceed about 50 pages per week with less assigned for weeks that include more difficult texts.<br><br>
 
         <strong>Evaluation</strong><br>
-        Evaluation techniques should improve students’ knowledge of the topic and their learning and presentation skills. For instance, we recommend that you ask for preliminary plans and draft copies of major assignments, so you can give guidance throughout the process. <br>
-        Avoid resting the evaluation of an entire course on one major assignment. Multiple shorter assignments or papers are usually more appropriate than one large final paper, for instance. <BR>
+        Evaluation techniques should improve students’ knowledge of the topic and their learning and presentation skills. For instance, we recommend that you ask for preliminary plans and draft copies of major assignments, so you can give guidance throughout the process. <br><br>
+        Avoid resting the evaluation of an entire course on one major assignment. Multiple shorter assignments or papers are usually more appropriate than one large final paper, for instance. <BR><br>
         Announce your grading criteria for assignments in the written syllabus.<br><br>
 
         <strong>Syllabus design</strong><br>
-        Please lay out a detailed week-by-week schedule that includes readings, assignments, and in-class activities. Include a general description of the course content, expectations for students, a complete list of readings and resources, and an explanation of how students will be evaluated and grading protocols. Look at a sample syllabus. <br>
+        Please lay out a detailed week-by-week schedule that includes readings, assignments, and in-class activities. Include a general description of the course content, expectations for students, a complete list of readings and resources, and an explanation of how students will be evaluated and grading protocols. Look at a sample syllabus. <br><br>
         You are welcome to subdivide the schedule into two day a week or three day a week format, but please be aware that the specific schedule will be determined only after your course’s approval.<br><br>
 
         <strong>Community involvement</strong><br>
         Identify occasions when a particular class period, event, or activity could be of interest to Collins residents at large, and to which you could invite a wider audience.<br><br>
 
         <strong>Attendance</strong><br>
-        Student participation and attendance at all Collins classes is expected. In addition to taking a class, students enrolled in Collins seminars are taking part in the intellectual life of Collins and so should get to know and interact with the other students.<br>
-        Many instructors institute an attendance policy that penalizes for absences. A common practice is to employ grade or point deductions after three unexcused absences. [Unexcused absences might include any absence for which there is no medical or court note: bad days, mild colds, family emergencies, weddings, funerals; there is something to be said for starting with a strict policy that allows you to make exceptions as you see fit.]<br>
-        Should you chose to include a participation grade, you might consider this simple formula: students’ grades are raised 1/3, lowered 1/3, or left unchanged as a function of participation. You may of course want to forego a participation grade altogether. <br>
-        Make sure your policy is clear to students at the beginning of the semester and clearly described in the syllabus.<br>
+        Student participation and attendance at all Collins classes is expected. In addition to taking a class, students enrolled in Collins seminars are taking part in the intellectual life of Collins and so should get to know and interact with the other students.<br><br>
+        Many instructors institute an attendance policy that penalizes for absences. A common practice is to employ grade or point deductions after three unexcused absences. [Unexcused absences might include any absence for which there is no medical or court note: bad days, mild colds, family emergencies, weddings, funerals; there is something to be said for starting with a strict policy that allows you to make exceptions as you see fit.]<br><br>
+        Should you chose to include a participation grade, you might consider this simple formula: students’ grades are raised 1/3, lowered 1/3, or left unchanged as a function of participation. You may of course want to forego a participation grade altogether. <br><br>
+        Make sure your policy is clear to students at the beginning of the semester and clearly described in the syllabus.<br><br>
       </p>
     </div>
   </div>
