--- a/proposal_guidelines.html
+++ b/proposal_guidelines.html
@@ -26,13 +26,13 @@
         <a class="nav-link active" href="https://dvesper729.github.io/boep/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">News & Events</a>
+        <a class="nav-link active" href="#">News & Events</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link active" href="#">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Prospective Instructors</a>
+        <a class="nav-link active" href="#">Prospective Instructors</a>
       </li>
     </ul>
   </div>
@@ -44,7 +44,7 @@
       <h2>Resources for Prospective Instructors</h2>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link active" href="https://dvesper729.github.io/boep/proposal_guidelines">Proposal Guidelines</a>
+          <a class="nav-link" href="https://dvesper729.github.io/boep/proposal_guidelines">Proposal Guidelines</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://dvesper729.github.io/boep/course_selection">How Courses are Selected</a>
