--- a/course_selection.html
+++ b/course_selection.html
@@ -44,10 +44,10 @@
       <h2>Resources for Prospective Instructors</h2>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link active" href="https://dvesper729.github.io/boep/proposal_guidelines">Proposal Guidelines</a>
+          <a class="nav-link" href="https://dvesper729.github.io/boep/proposal_guidelines">Proposal Guidelines</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="https://dvesper729.github.io/boep/course_selection">How Courses are Selected</a>
+          <a class="nav-link" href="https://dvesper729.github.io/boep/course_selection">How Courses are Selected</a>
         </li>
       </ul>
       <hr class="d-sm-none">
