--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <a class="nav-link active" href="https://dvesper729.github.io/boep">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">News & Events</a>
+        <a class="nav-link active" href="https://dvesper729.github.io/events">News & Events</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">About</a>
+        <a class="nav-link active" href="https://dvesper729.github.io/about">About</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" href="https://dvesper729.github.io/boep/prospective_instructors">Prospective Instructors</a>
