--- a/events.html
+++ b/events.html
@@ -26,7 +26,7 @@
         <a class="nav-link active" href="https://dvesper729.github.io/boep">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="https://dvesper729.github.io/events">News & Events</a>
+        <a class="nav-link active" href="https://dvesper729.github.io/boep/events">News & Events</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" href="https://dvesper729.github.io/boep/about">About</a>
@@ -37,7 +37,6 @@
     </ul>
   </div>
 </nav>
-
 <div class="container mt-5">
   <div class="row">
      <div class="col-sm-8">
