--- a/prospective_instructors.html
+++ b/prospective_instructors.html
@@ -23,13 +23,13 @@
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="https://dvesper729.github.io/boep/">Home</a>
+        <a class="nav-link active" href="https://dvesper729.github.io/boep">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">News & Events</a>
+        <a class="nav-link active" href="https://dvesper729.github.io/boep/events">News & Events</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">About</a>
+        <a class="nav-link active" href="https://dvesper729.github.io/boep/about">About</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" href="https://dvesper729.github.io/boep/prospective_instructors">Prospective Instructors</a>
