--- a/about.html
+++ b/about.html
@@ -38,21 +38,40 @@
   </div>
 </nav>
 
-<div class="container mt-5">
+<<div class="container mt-5">
   <div class="row">
-     <div class="col-sm-8">
+    <div class="col-sm-12">
       <h2>About</h2>
-      <p>
-        <strong>BOEP Co-Chairs</strong><br><br>
-        <strong>Hannah Gladden</strong><br>
-        Email: hgladden@iu.edu<br><br>
-        Hiya! My name is Hannah G. Gladden and I am a first-year student with a Political Science Major and a Spanish Minor. I serve as a Co-Chair of Collins' Board of Educational Programming. Outside of classes, I am also a member of the Marching Hundred and sometimes you can see me outside practicing the Clarinet.  If you have any questions or just want to chat, feel free to reach out. I am always excited to meet up in the Cheshire Café or just chat in the Tower Lounge. 
-        <br><br>
-        <strong>Daniel Vesper</strong><br>
-        Email: dvesper@iu.edu<br><br>
-        Howdy! My name is Daniel Vesper, and I am a senior majoring in Media as well as East Asian Languages and Cultures. I’ve been in Collins all four of my years here at IU, and in addition to being a Q instructor I serve as the Co-Chair of Collins' Board of Educational Programming. Outside of school I love watching movies, playing tabletop RPGs, reading poetry, and hanging out with friends in the Cheshire Café! I’m excited to meet all of you and show you what Collins has to offer! If you have any questions, please don't hesitate to reach out to me. 
+
+      <h4><strong>BOEP Co-Chairs</strong></h4>
+      <div class="row mb-4 align-items-center">
+        <div class="col-md-3 text-center">
+          <img src="images/hannah.jpg" alt="Hannah Gladden" class="img-fluid rounded" style="max-height: 200px;">
+        </div>
+        <div class="col-md-9">
+          <h5><strong>Hannah Gladden</strong></h5>
+          <p>Email: <a href="mailto:hgladden@iu.edu">hgladden@iu.edu</a></p>
+          <p>
+            Hiya! My name is Hannah G. Gladden and I am a first-year student with a Political Science Major and a Spanish Minor. I serve as a Co-Chair of Collins' Board of Educational Programming. Outside of classes, I am also a member of the Marching Hundred and sometimes you can see me outside practicing the Clarinet.  If you have any questions or just want to chat, feel free to reach out. I am always excited to meet up in the Cheshire Café or just chat in the Tower Lounge. 
+          </p>
+        </div>
+      </div>
+      <div class="row mb-4 align-items-center">
+        <div class="col-md-3 text-center">
+          <img src="images/daniel.jpg" alt="Daniel Vesper" class="img-fluid rounded" style="max-height: 200px;">
+        </div>
+        <div class="col-md-9">
+          <h5><strong>Daniel Vesper</strong></h5>
+          <p>Email: <a href="mailto:dvesper@iu.edu">dvesper@iu.edu</a></p>
+          <p>
+            Howdy! My name is Daniel Vesper, and I am a senior majoring in Media as well as East Asian Languages and Cultures. I’ve been in Collins all four of my years here at IU, and in addition to being a Q instructor I serve as the Co-Chair of Collins' Board of Educational Programming. Outside of school I love watching movies, playing tabletop RPGs, reading poetry, and hanging out with friends in the Cheshire Café! I’m excited to meet all of you and show you what Collins has to offer! If you have any questions, please don't hesitate to reach out to me. 
+          </p>
+        </div>
+      </div>
+
     </div>
   </div>
+</div>
 </div>
 </body>
 </html>
