--- a/thankyou.html
+++ b/thankyou.html
@@ -7,12 +7,33 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <style>
-  .header {
-    height: 200px;
-    background: #aaa;
-  }
   </style>
 </head>
+<body>
+
+<div class="p-5 bg-primary text-white text-center">
+  <h1>CLLC Board of Educational Programming</h1>
+</div>
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <div class="container-fluid">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link active" href="https://dvesper729.github.io/boep">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="#">News & Events</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="#">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="https://dvesper729.github.io/boep/prospective_instructors">Prospective Instructors</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
 <body>
 <div class="container mt-5 text-center">
   <h1 class="text-success">Thank You!</h1>
