--- a/index.html
+++ b/index.html
@@ -6,16 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <style>
-  .header {
-    height: 200px;
-    background: #aaa;
-  }
-  </style>
 </head>
 <body>
 
-<div class="p-5 bg-primary text-white text-center">
+<div class="p-5 bg-danger text-white text-center">
   <h1>CLLC Board of Educational Programming</h1>
 </div>
 
