--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
   </div>
 </nav>
 
-<<div class="container mt-5">
+<div class="container mt-5">
   <div class="row">
     <div class="col-sm-12">
       <h2>About</h2>
