--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 </nav>
   
 <div class="container mt-5">
+  <div class="col-md-3 text-center">
+          <img src="images/BOEP2023.jpg" OEPlt="Hannah Gladden" class="img-fluid rounded" style="max-height: 400px;">
+        </div>
   <div class="row">
      <div class="col-sm-8">
       <h2>Welcome to BOEP!</h2>
