--- a/prospective_instructors.html
+++ b/prospective_instructors.html
@@ -54,5 +54,6 @@
       <p>Collins Living-Learning Center invites advanced graduate students in the College of Arts and Sciences to submit course proposals. Collins courses are vetted by resident undergraduates who design a curriculum for their peers. These courses carry CASE Breadth of Inquiry Credit at the 100- and 200-levels. This is an excellent opportunity for advanced graduate students within the College of Arts and Sciences to gain teaching experience in a small class setting, exploring topics that might not fit departmental curricula.</p>
   </div>
 </div>
+    <div class="mt-5 p-4 bg-dark"> </div>  
 </body>
 </html>
