--- a/thankyou.html
+++ b/thankyou.html
@@ -38,5 +38,6 @@
   <p>Your message has been sent successfully. We'll get back to you soon.</p>
   <a href="about.html" class="btn btn-primary mt-3">Back to Contact Page</a>
 </div>
+    <div class="mt-5 p-4 bg-dark"> </div>  
 </body>
 </html>
