--- a/prospective_instructors.html
+++ b/prospective_instructors.html
@@ -5,10 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-
+  
+<div class="wrapper">
+    <div class="content">
+  
 <div class="p-5 bg-danger text-white text-center">
   <h1>CLLC Board of Educational Programming</h1>
 </div>
@@ -57,8 +61,10 @@
     </div>
   </div>
 </div>
-<div class="mt-5 p-4 bg-dark text-white text-center w-100">
-  <p>&copy; 2025 CLLC Board of Educational Programming</p>
+    </div>
+  <footer class="mt-auto p-4 bg-dark text-white text-center w-100">
+      <p>&copy; 2025 CLLC Board of Educational Programming</p>
+    </footer>
 </div>
 </body>
 </html>
