--- a/course_selection.html
+++ b/course_selection.html
@@ -80,7 +80,12 @@
       <tr>
         <td>Folklore in Horror Movies</td>
         <td>A&H</td>
-        <td>Analyzes how folk narratives, texts, and motifs are embodied in the genre of horror movies.</td>
+        <td>Analyzed how folk narratives, texts, and motifs are embodied in the genre of horror movies.</td>
+      </tr>
+      <tr>
+        <td>Art Inspired by Mathmatics</td>
+        <td>N&M</td>
+        <td>Analyzed works of art in many artistic disciplines via abstract mathematical structures.</td>
       </tr>
     </tbody>
   </table>
