--- a/thankyou.html
+++ b/thankyou.html
@@ -41,8 +41,9 @@
   <h1 class="text-primary">Thank You!</h1>
   <p>Your message has been sent successfully. We'll get back to you soon.</p>
   <a href="about.html" class="btn btn-primary mt-3">Back to Contact Page</a>
-  <br>
 </div>
+    </div>
+  <br>
     <footer class="mt-auto p-4 bg-dark text-white text-center w-100">
       <p>&copy; 2025 CLLC Board of Educational Programming</p>
     </footer>
