--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <a class="nav-link active" href="https://dvesper729.github.io/boep">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">News & Events</a>
+        <a class="nav-link active" href="https://dvesper729.github.io/boep/events">News & Events</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" href="https://dvesper729.github.io/boep/about">About</a>
